Fixed header spacing

--- a/assets/css/internships.css
+++ b/assets/css/internships.css
@@ -28,7 +28,7 @@
     width: 100%;
     height: 80%;
     font-family: 'Raleway';
-    padding: 6%;
+    padding: 8rem 6rem 6rem 6rem;
     position: absolute;
     background-color: #0a0a0b;
 }
